translation-tool/inputs/source_meta/objects/HSvc_CMC__c.object
<CustomObject>
    <description>Represent the customer management data for a given site</description>
    <fields>
        <fullName>AccountCreationDate__c</fullName>
        <label>Account Creation Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountHistoryRespErrorBuffer__c</fullName>
        <description>Error message</description>
        <label>AccountHistoryRespErrorBuffer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountHistoryRespErrorCode__c</fullName>
        <description>This will give you Error Code</description>
        <label>AccountHistoryRespErrorCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountHistoryRespStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If not able to get history item then value will be false</description>
        <label>AccountHistoryRespStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountInfoAccountCreationDate__c</fullName>
        <label>Account Creation Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInfoFutureTerminationDate__c</fullName>
        <description>If account is terminated in future then it’s date will populate in this parameter</description>
        <label>Future Termination Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInfoLastChangeDate__c</fullName>
        <label>Last Change Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInfoReactivationDueDate__c</fullName>
        <description>Till what time account can be reactivated</description>
        <label>Reactivation Due Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInfoServiceCloseDate__c</fullName>
        <label>Service Close Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInfoServiceStatus__c</fullName>
        <label>Service Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountInfoStatus__c</fullName>
        <description>Returns Active, Locked, or Cancelled.</description>
        <label>AccountStatus</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNo__c</fullName>
        <label>Account No</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <label>Account Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoAddress__c</fullName>
        <description>Address of Account holder</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoCity__c</fullName>
        <description>City of Account holder</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoFirstName__c</fullName>
        <description>First Name of Account holder</description>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoLastName__c</fullName>
        <description>Last Name of Account holder</description>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoMiddleName__c</fullName>
        <description>First Name of Account holder</description>
        <label>MiddleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoName__c</fullName>
        <description>Name of Account holder</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoState__c</fullName>
        <description>State of Account holder</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressInfoZipcode__c</fullName>
        <description>Zipcode of Account holder</description>
        <label>Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressStatus__c</fullName>
        <description>Returns Valid or Invalid</description>
        <label>AddressStatus</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If operation is allowed</description>
        <label>Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmountDue__c</fullName>
        <description>Amount Due on account</description>
        <label>AmountDue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnyTimeBandwidthAmount__c</fullName>
        <label>Any Time Bandwidth Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnyTimeBandwidthAvailable__c</fullName>
        <label>Any Time Bandwidth Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>CMC</relationshipLabel>
        <relationshipName>CMC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BandwidthBillingDeal__c</fullName>
        <label>Bandwidth BillingDeal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BandwidthInfoMessage__c</fullName>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BandwidthTokenActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the token passed is valid</description>
        <label>Token Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillType__c</fullName>
        <label>Bill Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingDeal__c</fullName>
        <label>Billing Deal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BonusBandwidthAmount__c</fullName>
        <label>Bonus Bandwidth Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BonusBandwidthAvailable__c</fullName>
        <label>Bonus Bandwidth Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessModel__c</fullName>
        <label>Business Model</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTLOCATIONID__c</fullName>
        <description>location id of the account</description>
        <label>CUST_LOCATION_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Activity</label>
        <referenceTo>Hsvc_CaseActivity__c</referenceTo>
        <relationshipLabel>CMC</relationshipLabel>
        <relationshipName>CMC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CMC</relationshipLabel>
        <relationshipName>CMC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollectionAmount__c</fullName>
        <label>Collection Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollectionStatus__c</fullName>
        <description>Returns In Collections or Not In Collections</description>
        <label>CollectionStatus</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommitmentEndDate__c</fullName>
        <description>Commitment end date.If hardware commitment date comes before service commitment date then we will give hardware commitment otherwise service commitment date</description>
        <label>CommitmentEndDate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentBalance__c</fullName>
        <description>Current balance</description>
        <label>CurrentBalance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentZone__c</fullName>
        <label>Current Zone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <description>Identifies the customer. (I.E. Consumer, Government Value Added Reseller, Value Added Reseller (VAR), GSA – Federal, GSA – Local, GSA – State, Government Affinity, Government Other, Small Medium Enterprise (SME), Franchise, Large Enterprise, Showroom, Guest, Employee, and Unknown)</description>
        <label>CustomerType</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailedAccountInfoMessage__c</fullName>
        <label>Detailed Account Info Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailedAccountInfoSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True for success False for Failure</description>
        <label>Detailed Account Info Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DetailedAccountInfoTokenActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the token passed is valid</description>
        <label>Detailed Account Info Token Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownlinkCellID__c</fullName>
        <label>Downlink Cell ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtendTrialFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Under Trial Period or not</description>
        <label>ExtendTrialFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAP__c</fullName>
        <label>FAP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeTokens__c</fullName>
        <label>Free Tokens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLSEGMENT__c</fullName>
        <label>GL SEGMENT</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLSegmentFossFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GLSegmentFossFlag value can be true or false</description>
        <label>GL Segment Foss Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GatewayCell__c</fullName>
        <label>Gateway Cell</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GatewayLocationCode__c</fullName>
        <label>Gateway</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GatewayName__c</fullName>
        <label>Gateway Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GatewayTokenActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the token passed is valid</description>
        <label>Token Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <label>Gateway</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSCUSTSITEID__c</fullName>
        <description>Cust site id</description>
        <label>HNS_CUST_SITE_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSLOCATIONID__c</fullName>
        <description>Location id</description>
        <label>HNS_LOCATION_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HardwareServiceStatus__c</fullName>
        <description>Status of /service/hardware</description>
        <label>HardwareServiceStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>Home Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPServiceStatus__c</fullName>
        <description>IP service status</description>
        <label>ServiceStatus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISStimulusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stimulus flag value can be true and false</description>
        <label>ISStimulusFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KAGateway__c</fullName>
        <label>Gateway</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEBeamID__c</fullName>
        <label>KE Beam ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KEChannelGroup__c</fullName>
        <label>KE Channel Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KEGateway__c</fullName>
        <label>KE Gateway</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEIPGWGroup__c</fullName>
        <label>KE IPGW Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KUChannelID__c</fullName>
        <label>KU Channel ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastBillDate__c</fullName>
        <description>Last Bill date</description>
        <label>LastBillDate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastChangeReason__c</fullName>
        <label>Last Change Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockReason__c</fullName>
        <description>Returns Voluntary, Involuntary,  Fraud, or Not Locked.</description>
        <label>LockReason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxNoOfDaysForPD__c</fullName>
        <description>Magnet mail payment due days</description>
        <label>MaxNoOfDaysForPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoAddress__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoCity__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoCompany__c</fullName>
        <label>Company</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoCountry__c</fullName>
        <label>Country</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoEmail__c</fullName>
        <label>Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoHomePhone__c</fullName>
        <label>Home Phone</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoJobTitle__c</fullName>
        <label>Job Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoState__c</fullName>
        <label>State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameInfoZipcode__c</fullName>
        <label>Zipcode</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of Account holder</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextBillCycleStart__c</fullName>
        <description>Next Billing Date</description>
        <label>NextBillCycleStart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <description>Order date of the account</description>
        <label>OrderDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderSourceID__c</fullName>
        <description>Company name</description>
        <label>OrderSourceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaidTokens__c</fullName>
        <label>Paid Tokens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentAccountNumber__c</fullName>
        <label>Parent Account Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentFlag__c</fullName>
        <label>Parent Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayInfoInvAddress__c</fullName>
        <description>Address where you need to send invoice</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayInfoInvCity__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayInfoInvCountry__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayInfoInvDeliveryMode__c</fullName>
        <description>0=email,1=post office</description>
        <label>DeliveryMode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayInfoInvName__c</fullName>
        <description>Name of the customer</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayInfoInvPurchaseOrder__c</fullName>
        <description>Purchase order no</description>
        <label>PurchaseOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayInfoInvState__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayInfoInvZipcode__c</fullName>
        <description>Zipcode</description>
        <label>Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoAddress__c</fullName>
        <description>Billing Address</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoCCExpiry__c</fullName>
        <description>Card Expiry Date</description>
        <label>CCExpiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoCCNum__c</fullName>
        <description>Card number</description>
        <label>CCNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoCardType__c</fullName>
        <description>Card Type(Master,Visa)</description>
        <label>CardType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoCity__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoCountry__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoName__c</fullName>
        <description>Name of the card Holder</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoState__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayincInfoZipcode__c</fullName>
        <description>Zip code</description>
        <label>Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentDueDate__c</fullName>
        <description>It will give due date for payment</description>
        <label>PaymentDueDate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDAddress__c</fullName>
        <description>Address of the account</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDBankAccountNumber__c</fullName>
        <description>Bank account Number</description>
        <label>BankAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDBankAccountType__c</fullName>
        <description>Account Type of the account</description>
        <label>BankAccountType</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDBankRoutingNumber__c</fullName>
        <description>Bank routing Number</description>
        <label>BankRoutingNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDCity__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDCountry__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDName__c</fullName>
        <description>Name of the account</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDState__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInfoDDZipcode__c</fullName>
        <description>Zipcode</description>
        <label>Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintLastInvoiceFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSR has selected Print Invoice after Terminate or not</description>
        <label>Print Last Invoice Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PromotionCharges__c</fullName>
        <description>It will give you promotion Deal list.</description>
        <label>PromotionCharges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReactivationFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account can be reactivated after termination or not(value can be true or false)</description>
        <label>Reactivation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReactivationGracePeriod__c</fullName>
        <description>Grace period (Define in Billing.properites)</description>
        <label>ReactivationGracePeriod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RefilDayOfMonth__c</fullName>
        <label>Refil Day Of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RefilDayOfWeek__c</fullName>
        <label>Refil Day Of Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RefilHourOfDay__c</fullName>
        <label>Refil Hour Of Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemainingCommitmentMonth__c</fullName>
        <description>If Terminated flag is true then it’s value be 0 otherwise it will give remaining commitment months</description>
        <label>RemainingCommitmentMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemainingHardwareCommitmentMonth__c</fullName>
        <description>Remaining Hardware commitments months</description>
        <label>RemainingHardwareCommitmentMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentalServiceFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/service/rental is present</description>
        <label>RentalServiceFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN__c</fullName>
        <label>SAN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceDiscountStatus__c</fullName>
        <label>Service Discount Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceStatus__c</fullName>
        <label>Service Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteID__c</fullName>
        <label>Site ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubscriberInfoMaxNoOfDaysForPD__c</fullName>
        <label>Max No Of Days For PD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriberInfoSubscribedMessage__c</fullName>
        <label>Subscribed Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriberInfoTNCFlag__c</fullName>
        <label>TNC Flag</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionInfoUserLogin__c</fullName>
        <label>User Login</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the calls were successful</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TerminateDealCancelFeeDetas__c</fullName>
        <description>Terminate Deal cancel feel List</description>
        <label>TerminateDealCancelFeeDetas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If IP service status is closed then it’s value will be true</description>
        <label>Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeZoneOffset__c</fullName>
        <label>Time Zone Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TokenActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the token passed is valid</description>
        <label>TokenActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TokenBandwidthAvailable__c</fullName>
        <label>Token Bandwidth Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCommitmentMonth__c</fullName>
        <description>If Terminated flag is true then it’s value be 0 otherwise it will give total commitment months</description>
        <label>TotalCommitmentMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalHardwareCommitmentMonth__c</fullName>
        <description>Hardware commitment months</description>
        <label>TotalHardwareCommitmentMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransportType__c</fullName>
        <label>TransportType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbilledActivity__c</fullName>
        <description>Pending Amount</description>
        <label>UnbilledActivity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UplinkCellID__c</fullName>
        <label>Uplink Cell ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageDailyTokenActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionActionDates__c</fullName>
        <description>If account is in collection Then it will give you collection action list.</description>
        <label>collectionActionDates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>